<?xml version="1.0"?>
<package>
  <name>cal_routine</name>
  <version>0.0.0</version>
  <description>The cal_routine package</description>
  <maintainer email="robpin@cartif.es">Roberto Pinillos</maintainer>

  <license>MIT</license>


  <author email="robpin@cartif.es">Roberto Pinillos</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>secuenciador</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>secuenciador</run_depend>

  <export>

  </export>
</package>
